# heterodyne

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.rag/: _RAG.md
.rag/arch/: C2_container.md  C3_component.md  C4_code.md
.rag/meta/: build_targets.md  claude_card.md  cmake_summary.md
.rag/test_params/: drv_gpu_lib_HeterodyneProcessorROCm.md  dsp_heterodyne_HeterodyneProcessorROCm.md
.rag/use_cases/: heterodyne_basic.md  heterodyne_benchmark_rocm.md  heterodyne_pipeline.md  heterodyne_rocm.md
Doc/: API.md  Full.md  Patterns.md  Quick.md  Алгоритм гетероди.md
Doc/copy/: heterodyne_Full.md  heterodyne_Quick.md
cmake/: DspHeterodyneConfig.cmake.in  version.cmake
include/dsp/heterodyne/: heterodyne_dechirp.hpp  heterodyne_params.hpp  i_heterodyne_processor.hpp
include/dsp/heterodyne/kernels/: heterodyne_kernels_rocm.hpp
include/dsp/heterodyne/processors/: heterodyne_processor_rocm.hpp
include/heterodyne/: heterodyne_dechirp.hpp  heterodyne_params.hpp  i_heterodyne_processor.hpp
include/heterodyne/kernels/: heterodyne_kernels_rocm.hpp
include/heterodyne/processors/: heterodyne_processor_rocm.hpp
kernels/: manifest.json
modules/fft_func/kernels/gfx1201/: manifest.json
modules/heterodyne/kernels/gfx1201/: Heterodyne_kernels.cl  manifest.json
python/: CMakeLists.txt  dsp_heterodyne_module.cpp  py_heterodyne.hpp  py_heterodyne_rocm.hpp
src/heterodyne/: CMakeLists.txt  heterodyne_dechirp.cpp  heterodyne_processor_rocm.cpp
src/heterodyne/include/processors/: heterodyne_processor_rocm.hpp
src/heterodyne/src/: heterodyne_dechirp.cpp  heterodyne_processor_rocm.cpp
src/heterodyne/tests/: README.md  all_test.hpp  heterodyne_benchmark_rocm.hpp  test_heterodyne_basic.hpp  test_heterodyne_pipeline.hpp  test_heterodyne_rocm.hpp
tests/: CMakeLists.txt  all_test.hpp  heterodyne_benchmark_rocm.hpp  main.cpp  test_heterodyne_basic.hpp  test_heterodyne_benchmark_rocm.hpp  test_heterodyne_pipeline.hpp  test_heterodyne_rocm.hpp
